--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 
 # command to run tests
 script:
-  - python -m  unittest discover -s  Tests
+  - python -m  unittest discover -s  tests
 
 branches:
   only:
